# LCMST

./: LICENSE
data/taxicab-benchmark/: Taxicab_100.txt  Taxicab_1000.txt  Taxicab_2018.txt  Taxicab_250.txt  Taxicab_500.txt
data/taxicab-converted-benchmark/: Taxicab_100.txt  Taxicab_250.txt  Taxicab_500.txt
solver/: CMakeLists.txt  main.cpp
solver/lib/: Cluster.h  Edge.h  Graph.cpp  Graph.h  Solver.cpp  Solver.h  Vertex.h
taxicab-converter/: convert.sh  converter.py  helpers.py  task.py
